// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should disable single tab 1`] = `
<li>
  <a
    className="js-foo disabled selected"
    href="#"
    onClick={[Function]}
  >
    <span>
      Foo
    </span>
  </a>
</li>
`;

exports[`should render correctly 1`] = `
<ul
  className="flex-tabs"
>
  <Tab
    key="foo"
    name="foo"
    onSelect={[MockFunction]}
    selected={false}
  >
    Foo
  </Tab>
  <Tab
    key="bar"
    name="bar"
    onSelect={[MockFunction]}
    selected={true}
  >
    Bar
  </Tab>
</ul>
`;

exports[`should render single tab correctly 1`] = `
<li>
  <a
    className="js-foo selected"
    href="#"
    onClick={[Function]}
  >
    <span>
      Foo
    </span>
  </a>
</li>
`;
